tests/valid/enum/payload_match.facet
enum Maybe {
  Some(unrestricted isize),
  None
}

fn value(m: unrestricted Maybe) -> unrestricted isize {
  match m {
    Some(x) => x,
    None => 0,
  }
}
