tests/invalid/enum/match_linear_payload_not_consumed.facet
enum Maybe {
  Some(linear isize),
  None
}

fn value(m: linear Maybe) -> unrestricted isize {
  match m {
    Some(v) => 0,
    None => 0,
  }
}
